header-rewrite-filter/envoy-sample-config.yaml
admin:
  profile_path: /tmp/envoy.prof
  access_log:
  - name: envoy.access_loggers.file
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
      path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001


static_resources:
  listeners:
  - name: web
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 8081 # envoy entrypoint
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: admin_ingress_http
          route_config:
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  headers:
                  - name: ":method"
                    string_match:
                      exact: GET
                route:
                  cluster: local_service
          http_filters:
          - name: sample
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.HeaderRewrite
              key: header-processing
              val: |
                  http set-bool mock_bool matches -m str matches
                  http set-bool another_mock_bool no-match -m str matches
                  http-request set-path mockpath if not another_mock_bool
                  http-request set-header x-forwarded-proto https if mock_bool and mock_bool or not mock_bool
                  http-response set-header mock_key mock_val1 mock_val2 if not another_mock_bool
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: local_service
    connect_timeout: 30s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    upstream_connection_options:
      tcp_keepalive:
        keepalive_time: 300
    common_lb_config:
      healthy_panic_threshold:
        value: 40
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8000 # connected to dummy docker backend
